Bug Fix:
- Abduction jokers should no longer crash the game on run load
- Peanuts now properly function in the snackbag
- Card ui shouldn't crash the game if accidentally called by another mod
- Added more general protections to objects to test whether they actually have a card to have an effect on
- power boosts should no longer create issues on reload
- Stargate now uses the correct art

Localization Fixes:
- Popeye now shows the percentage power increase
- A Clockwork Orange now has the correct title
- A Nightmare on Elm Street now has the correct title
- Fixed proper formatting for the following jokers:
     - The Bfg
     - Braveheart
     - Children of the Corn
     - A Clockwork Orange
     - Ex Machina
     - The Exorcist
     - Ghostbusters
     - Gremlins
     - I, Robot
     - The Iron Lady
     - Kindergarten Cop
     - Megalopolis
     - Nope
     - Ring
     - Wonka
     - Coco
     - My Dinner With André
     - Goodfellas
     - Gone Girl
     - A Nightmare on Elm Street
     - Nosferatu (2024)
     - Only Lovers Left Alive
     - Predator
     - Stargate
     - Turner & Hooch
     - Beetlejuice
     - Fight Club

Removed the incorrectly available Blank Deck With Griffin and David

V 0.8.1:
New Jokers:
- Easy A
- 9 
- Up
- Iron Lady
- Mamma Mia!
- la la land
- Cruella
- Men in Black
- Hellboy
- Popeye

New Decks:
- Cine2Nerdle Deck

Bug Fixes:
- Asteroid City works
- Genre Boosters spawn in every runs again
- Stargate no longer crashes the game
- Terminator 2 now functions properly
- Awards should no longer spawn on all jokers, but only movie jokers
- M3gan only spawns when you have a sci-fi card in deck
- The Bag of Peanuts confection now works properly

Localization Fixes:
- Clockwork Orange localization fix

V 0.8g:
Bug Fixes:
- Lucky Number Slevin no longer crashes the game
- Spells are protected against indexing error
- Oceans 11 works again

Localization Fixes and Changse:
- 30 Days of Night's localization fixed
- Iron Giant localization fixed